--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/BuildList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/BuildList.razor
@@ -131,9 +131,16 @@
         _timer = new Timer(2000);
         _timer.Elapsed += async (_, _) =>
         {
-            await GetList();
+            try
+            {
+                await GetList();
     // 刷新页面
-            await InvokeAsync(StateHasChanged);
+                await InvokeAsync(StateHasChanged);
+            }
+            catch (Exception e)
+            {
+                Console.WriteLine(e);
+            }
         };
         _timer.Enabled = true;
     }
