--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/TaskList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/TaskList.razor
@@ -127,9 +127,16 @@
         _timer = new Timer(5000);
         _timer.Elapsed += async (_, _) =>
         {
-            _lst = await _iocManager.Resolve<ITaskList>().ToTopListAsync(20);
-    // 刷新页面
-            await InvokeAsync(StateHasChanged);
+            try
+            {
+                _lst = await _iocManager.Resolve<ITaskList>().ToTopListAsync(20);
+                // 刷新页面
+                await InvokeAsync(StateHasChanged);
+            }
+            catch (Exception e)
+            {
+                Console.WriteLine(e);
+            }
         };
         _timer.Enabled = true;
     }
