组件渲染后才开启时间间隔器

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FailList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FailList.razor
@@ -162,22 +162,29 @@
 
         if (PageIndex < 1) PageIndex = 1;
         _lst = await _iocManager.Resolve<ITaskList>().ToFailListAsync(_pageSize, PageIndex, out _totalCount);
+    }
 
-        _timer = new Timer(5000);
-        _timer.Elapsed += async (_, _) =>
+    protected override Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
         {
-            try
+            _timer = new Timer(5000);
+            _timer.Elapsed += async (_, _) =>
             {
-                _lst = await _iocManager.Resolve<ITaskList>().ToFailListAsync(_pageSize, PageIndex, out _totalCount);
+                try
+                {
+                    _lst = await _iocManager.Resolve<ITaskList>().ToFailListAsync(_pageSize, PageIndex, out _totalCount);
     // 刷新页面
-                await InvokeAsync(StateHasChanged);
-            }
-            catch (Exception e)
-            {
-                Console.WriteLine(e);
-            }
-        };
-        _timer.Enabled = true;
+                    await InvokeAsync(StateHasChanged);
+                }
+                catch (Exception e)
+                {
+                    Console.WriteLine(e);
+                }
+            };
+            _timer.Enabled = true;
+        }
+        return Task.FromResult(0);
     }
 
     private void GotoList()
