--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/UnRunList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/UnRunList.razor
@@ -169,23 +169,30 @@
 
         if (PageIndex < 1) PageIndex = 1;
         await GetList();
-
-        _timer = new Timer(5000);
-        _timer.Elapsed += async (_, _) =>
-        {
-            try
-            {
-                await GetList();
-                await InvokeAsync(StateHasChanged);
-            }
-            catch (Exception e)
-            {
-                Console.WriteLine(e);
-            }
-        };
-        _timer.Enabled = true;
     }
-
+    
+    protected override Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            _timer = new Timer(5000);
+            _timer.Elapsed += async (_, _) =>
+            {
+                try
+                {
+                    await GetList();
+                    await InvokeAsync(StateHasChanged);
+                }
+                catch (Exception e)
+                {
+                    Console.WriteLine(e);
+                }
+            };
+            _timer.Enabled = true;
+        }
+        return Task.FromResult(0);
+    }
+    
     private async Task GetList()
     {
         _lst = await _iocManager.Resolve<ITaskList>().ToUnRunListAsync(_pageSize, PageIndex, out _totalCount);
