调整FSS任务的SQL实现

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Update.razor
@@ -1,6 +1,9 @@
 @page "/fss/task_group/update/{id:int}"
 @using FOPS.Abstract.Fss.Server
 @using FOPS.Abstract.Fss.Entity
+@using FS.Extends
+@using FS.Utils.Common
+@using FS.Utils.Component
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
@@ -123,6 +126,20 @@
         }
         try
         {
+            if (_info.IntervalMs < 1)
+            {
+    // 是否为数字
+                if (IsType.IsInt(_info.Cron))
+                {
+                    _info.IntervalMs = _info.Cron.ConvertType(0L);
+                    _info.Cron = "";
+                }
+                else if (!new Cron().Parse(_info.Cron))
+                {
+                    throw new Exception("Cron格式错误");
+                }
+            }
+
             await _iocManager.Resolve<ITaskGroupUpdate>().SaveAsync(_info);
             await js.InvokeVoidAsync("layer.alert", "修改成功", new {icon = 1});
             GotoList();
