--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/List.razor
@@ -154,7 +154,7 @@
         if (_isFirst) return;
         _isFirst = true;
 
-        _lst = await _iocManager.Resolve<ITaskGroupList>().ToListAsync();
+        _lst = await _iocManager.Resolve<ITaskGroupList>().ToListAsync() ?? new();
         _lst = _lst.OrderByDescending(o => o.Id).ToList();
         _totalCount = _lst.Count;
         _lst = _lst.ToList(_pageSize, PageIndex);
@@ -167,7 +167,7 @@
 
     private async Task RefreshCache()
     {
-        _lst = await _iocManager.Resolve<ITaskGroupList>().ToListAndSaveAsync();
+        _lst = await _iocManager.Resolve<ITaskGroupList>().ToListAndSaveAsync() ?? new();
         _lst = _lst.OrderByDescending(o => o.Id).ToList();
         _totalCount = _lst.Count;
         _lst = _lst.ToList(_pageSize, PageIndex);
