添加任务组时，需要同时创建任务

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Add.razor
@@ -78,7 +78,8 @@
             {
                 throw new Exception("标题、时间间隔、传输数据、Job名称 必须填写");
             }
-            await _iocManager.Resolve<ITaskGroupAdd>().AddAsync(_info);
+            _info.Id=await _iocManager.Resolve<ITaskGroupAdd>().AddAsync(_info);
+            await _iocManager.Resolve<ITaskAdd>().GetOrCreateAsync(_info.Id);
             await js.InvokeVoidAsync("layer.alert", "添加成功", new {icon = 1});
             nav.NavigateTo("/fss/task_group/list");
         }
