--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/hub/List.razor
@@ -96,7 +96,7 @@
         if (_isFirst) return;
         _isFirst = true;
         
-        _lst = await _iocManager.Resolve<IDockerHubService>().ToListAsync();
+        _lst = await _iocManager.Resolve<IDockerHubService>().ToListAsync()??new();
         _lst = _lst.OrderByDescending(o => o.Id).ToList();
         _totalCount = _lst.Count;
     }
