--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FailList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/tasks/FailList.razor
@@ -161,7 +161,7 @@
         _isFirst = true;
 
         if (PageIndex < 1) PageIndex = 1;
-        _lst = await _iocManager.Resolve<ITaskList>().ToFailListAsync(_pageSize, PageIndex, out _totalCount);
+        _lst = await _iocManager.Resolve<ITaskList>().ToFailListAsync(_pageSize, PageIndex, out _totalCount)??new();
     }
 
     protected override Task OnAfterRenderAsync(bool firstRender)
@@ -173,7 +173,7 @@
             {
                 try
                 {
-                    _lst = await _iocManager.Resolve<ITaskList>().ToFailListAsync(_pageSize, PageIndex, out _totalCount);
+                    _lst = await _iocManager.Resolve<ITaskList>().ToFailListAsync(_pageSize, PageIndex, out _totalCount)??new();
     // 刷新页面
                     await InvokeAsync(StateHasChanged);
                 }
