--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/cluster/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/cluster/List.razor
@@ -96,7 +96,7 @@
         if (_isFirst) return;
         _isFirst = true;
 
-        _lst = await _iocManager.Resolve<IClusterService>().ToListAsync();
+        _lst = await _iocManager.Resolve<IClusterService>().ToListAsync()??new();
         _totalCount = _lst.Count;
     }
 
