--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project_group/Add.razor
@@ -55,7 +55,7 @@
         if (_isFirst) return;
         _isFirst = true;
 
-        _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync();
+        _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync()??new();
         _selectCluster = _lstCluster.ToDictionary(o => o.Id, o => false);
     }
 
