--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/BuildList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/BuildList.razor
@@ -136,7 +136,7 @@
         _lstBuild = await _iocManager.Resolve<IBuildService>().ToBuildingList(20, pageIndex);
 
     // 说明本次构建的队列大于20条，需要都读出来
-        while (_lstBuild.All(o => o.Status == EumBuildStatus.None))
+        while (_lstBuild.Count > 0 && _lstBuild.All(o => o.Status == EumBuildStatus.None))
         {
             pageIndex++;
             _lstBuild.AddRange(await _iocManager.Resolve<IBuildService>().ToBuildingList(20, pageIndex));
