--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/admin/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/admin/List.razor
@@ -133,7 +133,7 @@
         if (_isFirst) return;
         _isFirst = true;
         
-        _lst = await _iocManager.Resolve<IAdminService>().ToListAsync();
+        _lst = await _iocManager.Resolve<IAdminService>().ToListAsync()??new();
         _lst = _lst.OrderByDescending(o => o.Id).ToList();
         _totalCount = _lst.Count;
     }
