--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/tpl/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/docker/tpl/List.razor
@@ -75,7 +75,7 @@
         if (_isFirst) return;
         _isFirst = true;
 
-        _lst = await _iocManager.Resolve<IDockerfileTplService>().ToListAsync();
+        _lst = await _iocManager.Resolve<IDockerfileTplService>().ToListAsync()??new();
         _lst = _lst.OrderByDescending(o => o.Id).ToList();
         _totalCount = _lst.Count;
     }
