--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/List.razor
@@ -86,7 +86,7 @@
         if (_isFirst) return;
         _isFirst = true;
 
-        _lst = await _iocManager.Resolve<IYamlTplService>().ToListAsync();
+        _lst = await _iocManager.Resolve<IYamlTplService>().ToListAsync()??new();
         _lst = _lst.OrderBy(o => o.K8SKindType).ToList();
         _totalCount = _lst.Count;
     }
