--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/List.razor
@@ -239,13 +239,13 @@
         if (_isFirst) return;
         _isFirst = true;
 
-        _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync();
-        _lstGit = await _iocManager.Resolve<IGitService>().ToListAsync();
-        _lstDockerfileTpl = await _iocManager.Resolve<IDockerfileTplService>().ToListAsync();
-        _lstDockerHub = await _iocManager.Resolve<IDockerHubService>().ToListAsync();
+        _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync()??new();
+        _lstGit = await _iocManager.Resolve<IGitService>().ToListAsync()??new();
+        _lstDockerfileTpl = await _iocManager.Resolve<IDockerfileTplService>().ToListAsync()??new();
+        _lstDockerHub = await _iocManager.Resolve<IDockerHubService>().ToListAsync()??new();
 
     // 模板
-        _lstTpl = await _iocManager.Resolve<IYamlTplService>().ToListAsync();
+        _lstTpl = await _iocManager.Resolve<IYamlTplService>().ToListAsync()??new();
         _lstTpl = _lstTpl.OrderByDescending(o => o.Id).ToList();
 
         await GetList();
@@ -272,7 +272,7 @@
     private async Task GetList()
     {
     // 重新读取所有项目列表
-        _lst = await _iocManager.Resolve<IProjectService>().ToListAsync();
+        _lst = await _iocManager.Resolve<IProjectService>().ToListAsync()??new();
 
     // 如果项目组不包含当前选中的组，则移除项目
         if (_groupId > 0)
