--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Update.razor
@@ -217,13 +217,13 @@
         if (_isFirst) return;
         _isFirst = true;
 
-        _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync();
-        _lstGit = await _iocManager.Resolve<IGitService>().ToListAsync();
-        _lstDockerfileTpl = await _iocManager.Resolve<IDockerfileTplService>().ToListAsync();
-        _lstDockerHub = await _iocManager.Resolve<IDockerHubService>().ToListAsync();
+        _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync()??new();
+        _lstGit = await _iocManager.Resolve<IGitService>().ToListAsync()??new();
+        _lstDockerfileTpl = await _iocManager.Resolve<IDockerfileTplService>().ToListAsync()??new();
+        _lstDockerHub = await _iocManager.Resolve<IDockerHubService>().ToListAsync()??new();
 
     // 模板
-        _lstTpl = await _iocManager.Resolve<IYamlTplService>().ToListAsync();
+        _lstTpl = await _iocManager.Resolve<IYamlTplService>().ToListAsync()??new();
         _lstTpl = _lstTpl.OrderByDescending(o => o.Id).ToList();
     }
 
@@ -269,8 +269,8 @@
                 await js.InvokeVoidAsync("layer.alert", "项目不存在", new {icon = 2, title = "出错了"});
                 GotoList();
             }
-            _lstGit = await _iocManager.Resolve<IGitService>().ToListAsync();
-            _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync();
+            _lstGit = await _iocManager.Resolve<IGitService>().ToListAsync()??new();
+            _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync()??new();
         }
     }
 
