--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Add.razor
@@ -68,7 +68,7 @@
 
 @code{
 
-    private readonly TaskGroupVO _info = new() {IsEnable = true, StartAt = DateTime.Now};
+    private readonly TaskGroupVO _info = new() {IsEnable = true, StartAt = DateTime.Now, Data = "{}"};
 
     private async Task AddInfo()
     {
