--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/List.razor
@@ -203,7 +203,7 @@
 
     // 集群
         _lstCluster = await _iocManager.Resolve<IClusterService>().ToListAsync()??new();
-        if (_lstCluster != null) _clusterId = _lstCluster[0].Id;
+        if (_lstCluster.Count > 0) _clusterId = _lstCluster[0].Id;
 
         await GetList();
     }
@@ -263,7 +263,7 @@
         {
             await _iocManager.Resolve<IBuildService>().Add(project.Id, _clusterId);
             await GetList();
-            await js.InvokeVoidAsync("layer.alert", "已加入到队列", new {icon = 1, title = "执行结果"});
+            await js.InvokeVoidAsync("layer.msg", "已加入到队列", new {icon = 1, title = "执行结果"});
         }
         catch (Exception e)
         {
@@ -274,6 +274,11 @@
 
     private async Task AddAllBuild()
     {
+        if (_lst.Count == 0)
+        {
+            await js.InvokeVoidAsync("layer.msg", "当前没有需要构建的项目");
+            return;
+        }
         var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
         try
         {
@@ -281,7 +286,7 @@
             {
                 await _iocManager.Resolve<IBuildService>().Add(project.Id, _clusterId);
             }
-            await js.InvokeVoidAsync("layer.alert", "已加入到队列", new {icon = 1, title = "执行结果"});
+            await js.InvokeVoidAsync("layer.msg", "已加入到队列", new {icon = 1, title = "执行结果"});
         }
         catch (Exception e)
         {
