修复编辑项目组时，无法自动筛选集群选择框

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/List.razor
@@ -82,7 +82,7 @@
                                 </td>
                                 <td data-field="Title">
                                     <div class="laytable-cell-14-0-2">
-                                        <a href="@info.Hub" target="_blank">@info.Hub</a>
+                                        @info.Hub
                                     </div>
                                 </td>
                                 <td data-field="Items">
